--- a/auth-service-dev.properties
+++ b/auth-service-dev.properties
@@ -40,7 +40,7 @@ eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka
 #spring.kafka.producer.value-serializer= org.apache.kafka.common.serialization.StringSerializer
 
         
-#zipkin.baseUrl: http://localhost:9411
+zipkin.baseUrl: http://localhost:9411
 
 #management.endpoints.web.exposure.include= health, metrics, prometheus
 #management.metrics.tags.application=${spring.application.name}
